# FreeWorldEngine

./: CMakeLists.txt  README.md
core/: CMakeLists.txt  Camera.cpp  Camera.h  Common.h  Content.h  ContentLoader.h  Core.cpp  Core.h  DataLoader.h  ImageManager.cpp  ImageManager.h  Library.cpp  Library.h  LibraryManager.cpp  LibraryManager.h  Log.cpp  Log.h  Logger.cpp  Logger.h  MovableObject.cpp  MovableObject.h  PhysicsBody.cpp  PhysicsBody.h  PhysicsGeometry.cpp  PhysicsGeometry.h  PhysicsManager.cpp  PhysicsManager.h  PhysicsMaterial.cpp  PhysicsMaterial.h  PhysicsMaterialManager.cpp  PhysicsMaterialManager.h  PhysicsSpace.cpp  PhysicsSpace.h  PluginManager.cpp  PluginManager.h  ResourceManager.cpp  ResourceManager.h  SceneModel.cpp  SceneModel.h  SceneModelManager.cpp  (+10 more)
core/deprecated/: GLFunctions.cpp  GLRenderSystem.cpp  GLRenderSystem.h  GLSampler.cpp  GLSampler.h  GLShaderProgram.cpp  GLShaderProgram.h  GLTexture.cpp  GLTexture.h  GLVertexArrayObject.cpp  GLVertexArrayObject.h  GLVertexBufferObject.cpp  GLVertexBufferObject.h  PhysicsMaterial.h  PhysicsMaterialManager.cpp  PhysicsSpace.cpp  WindowManager.cpp  WindowManager.h
demo/: CMakeLists.txt  main.cpp
demo2/: CMakeLists.txt  main.cpp
demo3/: CMakeLists.txt  main.cpp
include/: Content.h  CoreSettings.h  FreeWorldEngine.h  ICamera.h  IContent.h  IContentLoader.h  ICore.h  IImage.h  IImageLoader.h  IImageManager.h  ILibrary.h  ILibraryManager.h  ILog.h  ILogger.h  IMeshBuilder.h  IMovableObject.h  IPhysicsBody.h  IPhysicsGeometry.h  IPhysicsManager.h  IPhysicsMaterial.h  IPhysicsMaterialManager.h  IPhysicsSpace.h  IPlugin.h  IPluginManager.h  IResource.h  IResourceManager.h  IScene.h  ISceneLoader.h  ISceneModel.h  ISceneModelManager.h  IThread.h  IThreadManager.h  IWindow.h  IWindowManager.h  Platform.h  SceneModelManager.cpp  SceneModelManager.h  Types.h
include/audio/: IAudioBuffer.h  IAudioEngine.h  IAudioListener.h  IAudioSource.h
include/core/: CoreSettings.h  IContent.h  IContentLoader.h  ICore.h  ILibrary.h  ILibraryManager.h  ILog.h  ILogger.h  IPlugin.h  IPluginManager.h  IResource.h  IResourceManager.h  IThread.h  IThreadManager.h  IWindow.h  IWindowManager.h
include/deprecated/: IRenderSystem.h  IShaderProgram.h  ITexture.h  IVertexArrayObject.h  IVertexBufferObject.h
include/graphics_engine/: IGraphicsCamera.h  IGraphicsEngine.h  IGraphicsLight.h  IGraphicsMaterial.h  IGraphicsMaterialManager.h  IGraphicsModel.h  IGraphicsResource.h  IGraphicsScene.h  IGraphicsSceneManager.h  IGraphicsTexture.h  IGraphicsTextureManager.h  IGraphicsWindow.h
include/math/: BspTree.h  MathSettings.h  MathTypes.h  MathUtils.h  MeshPainter.h  MeshWrapper.h  RasterWrapper.h  SceneDataWrapper.h
include/physics/: IPhysicsGeometry.h  IPhysicsMaterialManager.h
include/renderer/: GLRendererSettings.h  IGLBufferObject.h  IGLRenderer.h  IGLResource.h  IGLShader.h  IGLShaderProgram.h  IGLVertexArrayObject.h  IGPUBuffer.h  IGPUBufferContainer.h  IGPUFrameBuffer.h  IGPURenderer.h  IGPUShader.h  IGPUTexture.h
include/utility/: AutoNameGenerator.h  BspTree.h  DateTime.h  File.h  KeyGenerator.h  Library.h  MathTypes.h  MeshWrapper.h  Tree.h  UtilitySettings.h  XML.h
math/: BspTree.cpp  CMakeLists.txt  MathUtils.cpp  MeshPainter.cpp  MeshWrapper.cpp  RasterWrapper.cpp  SceneDataWrapper.cpp
plugins/: CMakeLists.txt
plugins/FreeImageLoaderPlugin/: CMakeLists.txt  FreeImageLoaderPlugin.cpp  FreeImageLoaderPlugin.h  main.cpp
plugins/GLRendererPlugin/: CMakeLists.txt  GLBuffer.cpp  GLBuffer.h  GLBufferContainer.cpp  GLBufferContainer.h  GLBufferObject.cpp  GLBufferObject.h  GLFrameBuffer.cpp  GLFrameBuffer.h  GLOcclusionQuery.cpp  GLOcclusionQuery.h  GLRenderer.cpp  GLRenderer.h  GLRendererPlugin.cpp  GLRendererPlugin.h  GLShader.cpp  GLShader.h  GLShaderProgram.cpp  GLShaderProgram.h  GLTexture.cpp  GLTexture.h  GLVertexArrayObject.cpp  GLVertexArrayObject.h  main.cpp
plugins/GraphicsEnginePlugin/: AbstractSceneOptimizer.cpp  AbstractSceneOptimizer.h  CMakeLists.txt  FrustumCullingSceneOptimizer.cpp  FrustumCullingSceneOptimizer.h  GPUMesh.cpp  GPUMesh.h  GraphicsCamera.cpp  GraphicsCamera.h  GraphicsEngine.cpp  GraphicsEngine.h  GraphicsEnginePlugin.cpp  GraphicsEnginePlugin.h  GraphicsLight.cpp  GraphicsLight.h  GraphicsMaterial.cpp  GraphicsMaterial.h  GraphicsMaterialManager.cpp  GraphicsMaterialManager.h  GraphicsModel.cpp  GraphicsModel.h  GraphicsScene.cpp  GraphicsScene.h  GraphicsSceneManager.cpp  GraphicsSceneManager.h  GraphicsTexture.cpp  GraphicsTexture.h  GraphicsTextureManager.cpp  GraphicsTextureManager.h  GraphicsWindow.cpp  GraphicsWindow.h  KdTree.cpp  KdTree.h  NoneSceneOptimizer.cpp  NoneSceneOptimizer.h  OctreeSceneOptimizer.cpp  OctreeSceneOptimizer.h  ShaderManager.cpp  ShaderManager.h  main.cpp
plugins/ImageLoaderPlugin/: CMakeLists.txt  Image.cpp  Image.h  ImageLoader.cpp  ImageLoader.h  ImageLoaderPlugin.cpp  ImageLoaderPlugin.h  main.cpp
plugins/ImageManagerPlugin/: CMakeLists.txt  ImageManager.cpp  ImageManager.h  ImageManagerPlugin.cpp  ImageManagerPlugin.h  main.cpp
plugins/LoggerPlugin/: CMakeLists.txt  HtmlLog.cpp  HtmlLog.h  LoggerPlugin.cpp  LoggerPlugin.h  TerminalLog.cpp  TerminalLog.h  TextFileLog.cpp  TextFileLog.h  main.cpp
plugins/QtWindowManagerPlugin/: CMakeLists.txt  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h  WindowManagerPlugin.cpp  moc_Window.cpp
plugins/SceneLoaderPlugin/: CMakeLists.txt  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneLoaderPlugin.cpp  SceneLoaderPlugin.h  main.cpp
plugins/ThreadManagerPlugin/: CMakeLists.txt  Thread.cpp  Thread.h  ThreadManager.cpp  ThreadManager.h  ThreadManagerPlugin.cpp  ThreadManagerPlugin.h  main.cpp
plugins/WindowManagerPlugin/: CMakeLists.txt  Window.cpp  Window.h  WindowManager.cpp  WindowManager.h  WindowManagerPlugin.cpp  WindowManagerPlugin.h  main.cpp
test/xml/: CMakeLists.txt  example.xml  incorrect.xml  main.cpp  menu.xml
utility/: AutoNameGenerator.cpp  BspTree.cpp  CMakeLists.txt  DateTime.cpp  File.cpp  KeyGenerator.cpp  Library.cpp  MathUtils.cpp  XML.cpp
